# ONEGIN_lib

./: .gitignore  CMakeLists.txt  Makefile
include/: ONEGIN_files.h  ONEGIN_files.hpp  ONEGIN_lib.h  ONEGIN_strings.h  ONEGIN_strings.hpp  ONEGIN_structs.h  ONEGIN_structs.hpp
src/: ONEGIN_files.cpp  ONEGIN_strings.cpp  ONEGIN_structs.cpp
